# food4thought

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/services/: generator.py  menu_parser.py
backend/tests/: test_generator.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/.next-dev/: prerender-manifest.json  trace
frontend/.next-dev/cache/: .rscinfo
frontend/.next-dev/server/: server-reference-manifest.json  webpack-runtime.js
frontend/.next-dev/server/app/: page.js  page_client-reference-manifest.js
frontend/.next-dev/server/app/_not-found/: page.js  page_client-reference-manifest.js
frontend/.next-dev/server/vendor-chunks/: @swc.js
frontend/.next-dev/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next-dev/static/chunks/app/: layout.js  page.js
frontend/.next-dev/static/chunks/app/_not-found/: page.js
frontend/.next-dev/static/css/app/: layout.css
frontend/.next-dev/static/webpack/: 8f729fbc1b4b3a0d.webpack.hot-update.json  b3f2ec54f78b9059.webpack.hot-update.json  webpack.6840df061a436bfe.hot-update.js  webpack.8f729fbc1b4b3a0d.hot-update.js  webpack.99886075c382ec4b.hot-update.js  webpack.b3f2ec54f78b9059.hot-update.js  webpack.bb958ad5f857fa51.hot-update.js
frontend/.next-dev/static/webpack/app/: layout.8f729fbc1b4b3a0d.hot-update.js  page.99886075c382ec4b.hot-update.js
frontend/.next-dev/types/app/: layout.ts  page.ts
frontend/app/: globals.css  layout.tsx  page.tsx
