[tool.poetry]
name = "vegan-menu-generator-backend"
version = "0.1.0"
description = "Backend API for inferring pantry ingredients from menus and generating vegan dish ideas."
authors = ["Codex <codex@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
python-multipart = "^0.0.20"
pydantic = "^2.11.3"
pydantic-settings = "^2.8.1"
pdfplumber = "^0.11.6"
openai = "^1.75.0"
supabase = "^2.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
